examples/test/testpolicy6040.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6040
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key19: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value33
          key25: value46
          key37: value35
      podSelector:
        matchLabels:
          key42: value46
          key26: value39
          key21: value45
